--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  //db하이버네이트용
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //타임리프 프론트용
+    implementation 'org.springframework.boot:spring-boot-starter-web'       //MVC
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'              //테스트 코드에서 롬복 사용 가능하게 설정
+    annotationProcessor 'org.projectlombok:lombok'      //테스트 코드에서 롬복 사용 가능하게 설정
     testCompileOnly 'org.projectlombok:lombok'          //테스트 코드에서 롬복 사용 가능하게 설정
     testAnnotationProcessor 'org.projectlombok:lombok'  //테스트 코드에서 롬복 사용 가능하게 설정
 
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools' //boot용 개발환경
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'              //db용 드라이버
 
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'   //톰캣
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'  //테스트 환경
 }
 
 tasks.named('bootBuildImage') {
