--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // db 하이버네이트용
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 타임리프 프론트용
-    implementation 'org.springframework.boot:spring-boot-starter-web'       // mvc
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  //db하이버네이트용
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //타임리프 프론트용
+    implementation 'org.springframework.boot:spring-boot-starter-web'       //MVC
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testCompileOnly 'org.projectlombok:lombok'      // 테스트 코드에서 롬북 사용 가능하게 설정
-    testAnnotationProcessor 'org.projectlombok:lombok' // 테스트 코드에서 롬북 사용 가능하게 설정
+    compileOnly 'org.projectlombok:lombok'              //테스트 코드에서 롬복 사용 가능하게 설정
+    annotationProcessor 'org.projectlombok:lombok'      //테스트 코드에서 롬복 사용 가능하게 설정
+    testCompileOnly 'org.projectlombok:lombok'          //테스트 코드에서 롬복 사용 가능하게 설정
+    testAnnotationProcessor 'org.projectlombok:lombok'  //테스트 코드에서 롬복 사용 가능하게 설정
 
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'          // boot 용 개발 환경
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'                      // db용 드라이버
+    developmentOnly 'org.springframework.boot:spring-boot-devtools' //boot용 개발환경
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'              //db용 드라이버
 
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'   // 톰켓
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'  // 테스트 환경 구축
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'   //톰캣
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'  //테스트 환경
 }
 
 tasks.named('bootBuildImage') {
